--- a/angular.json
+++ b/angular.json
@@ -89,6 +89,13 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "branch": "gh-pages",
+            "remote": "origin"
+          }
         }
       }
     }
